--- a/Storyboards/Map.storyboard
+++ b/Storyboards/Map.storyboard
@@ -77,8 +77,8 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plz Make This Work" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HdA-6Z-n9N">
-                                                    <rect key="frame" x="0.0" y="2" width="145" height="41"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="0.0" y="-0.5" width="145" height="46"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -91,18 +91,19 @@
                                                                 <constraint firstAttribute="width" constant="200" id="uvX-lf-EUk"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVt-Yv-lZd">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vicinity" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tVt-Yv-lZd">
                                                             <rect key="frame" x="0.0" y="13.5" width="200" height="30"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="30" id="8Nd-xg-2z1"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="tVt-Yv-lZd" secondAttribute="trailing" id="5c3-cO-zL3"/>
+                                                        <constraint firstAttribute="bottom" secondItem="tVt-Yv-lZd" secondAttribute="bottom" id="P0D-B6-gm6"/>
                                                         <constraint firstAttribute="trailing" secondItem="Dx0-i0-Q43" secondAttribute="trailing" id="ekY-SU-ZBe"/>
                                                     </constraints>
                                                 </stackView>
@@ -139,9 +140,15 @@
                                 <segue destination="jzi-g4-0PX" kind="unwind" identifier="selectionMade" unwindAction="unwindToMapViewController:" id="faU-ef-1E6"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Remove Place" id="qTc-5i-LwU">
+                            <connections>
+                                <action selector="removePlacePressed:" destination="u5z-ae-Q0h" id="cma-oL-YOE"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="fQc-IF-KdP" id="NKk-Py-gZM"/>
+                        <segue destination="jzi-g4-0PX" kind="unwind" identifier="removeMarker" unwindAction="unwindToMapViewController:" id="zVN-dP-VO7"/>
                     </connections>
                 </viewController>
                 <exit id="jzi-g4-0PX" userLabel="Exit" sceneMemberID="exit"/>
@@ -154,7 +161,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="f1o-bA-d65" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="YuO-kx-9uB">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YuO-kx-9uB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
