--- a/Base.lproj/LaunchScreen.storyboard
+++ b/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +21,21 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon1" translatesAutoresizingMaskIntoConstraints="NO" id="dPF-8D-p2d">
+                                <rect key="frame" x="30" y="175.5" width="315" height="315"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="dPF-8D-p2d" secondAttribute="height" multiplier="1:1" id="umt-tC-Obp"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.71372549019999998" green="0.34509803919999998" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dPF-8D-p2d" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="30" id="0qf-2g-3OX"/>
+                            <constraint firstItem="dPF-8D-p2d" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="7Ug-LD-KkX"/>
+                            <constraint firstItem="dPF-8D-p2d" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Jh2-PS-8oI"/>
+                            <constraint firstAttribute="trailing" secondItem="dPF-8D-p2d" secondAttribute="trailing" constant="30" id="v3e-dk-iRP"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +43,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AppIcon1" width="1024" height="1024"/>
+    </resources>
 </document>
